dashboard: stop overflow by fixing table layout #2595

--- a/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
@@ -948,3 +948,7 @@ div[data-for*="help_for"] {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+.dashboard_grid_column table {
+  table-layout: fixed;
+}
